# hedb

./: .gitignore  Makefile  README.md  config.mk  load_tpch.sh  load_tpch_native.sh  run_tpch.sh  test_helper.sh  unit-test.md  unit-test.sql
benchmark/: load_db.sh  process-tpch-res.sh  test.sh
benchmark/config/: tpcc_config.xml  tpcc_config_s1_t7.xml  tpch_config.xml
benchmark/db_schemas/: tpcc-schema.sql  tpcc-schema_encrypted.sql  tpcc-schema_fully_encrypted.sql  tpch-schema-enc-lineitem.sql  tpch-schema-encrypted.sql  tpch-schema-float.sql
benchmark/sqls/: Q10.sql  Q12.sql  Q20.sql  Q4.sql  Q6.sql
benchmark/tools/: dbgen
docs/: build-from-scratch.md
klee_scripts/: desenitize.sh  gen_constraint.sh  run_test.sh  run_z3.py
patch/: qemu_v8.mk
scripts/: desenitize_test.sh  eval_AE_time.sh  experiment_steps.py  how_to_build.md  old-readme.md  prepareKV.py  run_experiment.py  run_test.sh  tests.sh  type-ii-edb-breach.py
scripts/config/: expTPCH.json  nativeTPCH.json  optimizedTPCH.json  order.json  recordTPCH.json  replayTPCH.json
scripts/fig/: basic_graph.py  hedb-plot.py  paper-data.xlsx  util.py
scripts/micro-bench/: query_time.py
scripts/sqls/base-sqls/: Q1.sql  Q10.sql  Q12.sql  Q14.sql  Q15.sql  Q20.sql  Q3.sql  Q4.sql  Q5.sql  Q6.sql  Q7.sql  Q8.sql
scripts/sqls/exp_sqls/: Q3.sql  Q9.sql
scripts/sqls/insecure-sqls/: Q7.sql  Q8.sql
scripts/sqls/origin-sqls/: Q1.sql  Q10.sql  Q12.sql  Q14.sql  Q15.sql  Q20.sql  Q21.sql  Q22.sql  Q3.sql  Q4.sql  Q5.sql  Q6.sql  Q7.sql  Q8.sql  Q9.sql
scripts/sqls/record-sqls/: Q7.sql  Q8.sql  Q9.sql
scripts/sqls/replay-sqls/: Q7.sql  Q8.sql  Q9.sql
scripts/sqls/timestamp-sqls/: Q7.sql  Q8.sql
scripts/tmp/: desenitize.xlsx
scripts/tmp/base-0.1/: Q1.out  Q10.out  Q11.out  Q12.out  Q13.out  Q14.out  Q15.out  Q16.out  Q17.out  Q18.out  Q19.out  Q2.out  Q20.out  Q21.out  Q22.out  Q3.out  Q4.out  Q5.out  Q6.out  Q7.out  Q8.out  Q9.out
scripts/tmp/kv-0.1/: Q1.out  Q10.out  Q11.out  Q12.out  Q13.out  Q14.out  Q15.out  Q16.out  Q17.out  Q18.out  Q19.out  Q2.out  Q20.out  Q21.out  Q22.out  Q3.out  Q4.out  Q5.out  Q6.out  Q7.out  Q8.out  Q9.out
scripts/tmp/kv-res/: Q1.out  Q10.out  Q11.out  Q12.out  Q13.out  Q14.out  Q15.out  Q16.out  Q17.out  Q18.out  Q19.out  Q2.out  Q20.out  Q21.out  Q22.out  Q3.out  Q4.out  Q5.out  Q6.out  Q7.out  Q8.out  Q9.out
src/: CMakeLists.txt
src/cmake/: FindSodium.cmake
src/enclave/: desenitizer.cpp  enc_float_ops.c  enc_int32_ops.c  enc_int_ops.c  enc_ops.c  enc_text_ops.c  enc_text_ops.cp  enc_timestamp_ops.c  like_match.c
src/enclave/include/: desenitizer.h  enc_float_ops.h  enc_int_ops.h  enc_ops.h  enc_text_ops.h  enc_timestamp_ops.h  kv.h  like_match.h  plain_float_ops.h  plain_int_ops.h  plain_text_ops.h  plain_timestamp_ops.h
src/enclave/klee-wrapper/: prefix_udf.c  prefix_udf.h  wrapper.c
src/enclave/klee_wrapper/: .desenitizer.c  prefix_udf.c  prefix_udf.h  run_klee.sh  wrapper.c
src/enclave/kv/: kv.c  kv.cpp  vectormap.cpp
src/enclave/plain_ops/: plain_float_ops.c  plain_int_ops.c  plain_text_ops.c  plain_timestamp_ops .c
src/enclave/sgx/: enclave.config.xml  enclave.cpp  enclave.edl  enclave.hpp  enclave_t.h
src/enclave/simulate/: crypto.c  crypto.h  sim.cpp  sim.hpp
src/enclave/trustzone/: 64974d40-92cd-4714-9e8f-442f3a4db3af.dmp  64974d40-92cd-4714-9e8f-442f3a4db3af.elf  64974d40-92cd-4714-9e8f-442f3a4db3af.map  64974d40-92cd-4714-9e8f-442f3a4db3af.stripped.elf  64974d40-92cd-4714-9e8f-442f3a4db3af.ta  Makefile  crypto.c  crypto.h  dyn_list  ops_ta.c  ops_ta.h  sub.mk  ta.lds  user_ta_header_defines.h
src/enclave/trustzone/ta_dev_kit/host_include/: conf.h  conf.mk
src/extension/: CMakeLists.txt  enc_float4.c  enc_float4.cpp  enc_int4.c  enc_int4.cpp  enc_int4.cx  enc_text.c  enc_text.cpp  enc_timestamp.c  enc_timestamp.cpp  encdb--0.0.1-x.sql  encdb--0.0.1.sql  encdb.c  encdb.cpp  like_match.c
src/extension/include/: enc_float_ops.hpp  enc_int_ops.hpp  enc_ops.hpp  enc_text_ops.hpp  enc_timestamp_ops.hpp  extension.h  extension.hpp  extension_helper.h  extension_helper.hpp  interface.hpp  kv.hpp  plain_ops.h  recorder.hpp  request.hpp  stdafx.h  stdafx.hpp  tee_interface.hpp
src/extension/interface/: enc_float_ops.cpp  enc_int_ops.cpp  enc_text_ops.cpp  enc_timestamp_ops.cpp  interface.cpp
src/extension/interface/sgx/: sgx_interface.cpp
src/extension/interface/simulate/: sim_interface.cpp  sim_interface.hpp
src/extension/interface/trustzone/: tz_interface.c
src/extension/kv_ops/: float_ops.cpp  int_ops.cpp  kv.cpp  like_match.cpp  text_ops.cpp  timestamp_ops.cpp
src/extension/rr/: recorder.cpp  replayer.cpp
src/include/: base64.h  debug.h  defs.h  enc_types.h  kv-store.hpp  kv.hpp  ops_server.h  request_types.h  serialization.hpp  sync.h  timestamp_parse.hpp  vectormap.hpp
src/kv-builder/: CMakeLists.txt  datetime.c  kv-builder.cpp  kv-loader.cpp  shm-example.cpp
src/utils/: base64.c  debug.c  sync.c
test/bench-res/: out-1.csv  out-2.csv  out-3.csv  out-w4.csv  out.csv  out1.csv  out2.csv  out3.csv  out4.csv  out5.csv  process.py  scale-w-temp.ods  scale-w1-mbedtls.csv  scale-w2-mbedtls.csv  scale-w4-mbedtls.csv  scale-w8-mbedtls.csv  sclae-w1.csv  sclae-w2.csv  sclae-w8.csv  test.csv  test1.csv
test/ops-micro/: CMakeLists.txt  test  test.cpp
test/sqls/: insert-plain.sql  insert.sql
test/tpch/: calc.awk  calc_print.sh  no-num-process-res.sh  print_time.sh  process-sql-res.sh  run.sh  run_native.sh  table_size.sql
test/tpch/bulk-4/: Q1.out  Q10.out  Q11.out  Q12.out  Q13.out  Q14.out  Q15.out  Q16.out  Q17.out  Q18.out  Q19.out  Q2.out  Q20.out  Q21.out  Q22.out  Q3.out  Q4.out  Q5.out  Q6.out  Q7.out  Q8.out  Q9.out
test/tpch/bulk-8196/: Q1.out  Q10.out  Q11.out  Q12.out  Q13.out  Q14.out  Q15.out  Q16.out  Q17.out  Q18.out  Q19.out  Q2.out  Q20.out  Q21.out  Q22.out  Q3.out  Q4.out  Q5.out  Q6.out  Q7.out  Q8.out
test/tpch/bulk-ex/: Q1.out  Q10.out  Q11.out  Q12.out  Q13.out  Q14.out  Q15.out  Q16.out  Q17.out  Q18.out  Q19.out  Q2.out  Q20.out  Q21.out  Q22.out  Q3.out  Q4.out  Q5.out  Q6.out  Q7.out  Q8.out  (+1 more)
(+176 files in other folders)
